lab03/lab03.jj
options {
  IGNORE_CASE = true;
  STATIC = false;
}

PARSER_BEGIN(Gramatica)

package lab03;

import lab03.instr.*;
import lab03.exp.*;
import lab03.func.*;

import java.util.*;


public class Gramatica {

    List<Instruccion> instrucciones = new ArrayList();
    Map<String, Funcion> funciones = new HashMap<String, Funcion>();
}
PARSER_END(Gramatica)

/** Lexico */
SKIP : {
      " "
    | "\t"
    | "\r"
    | "\n"
}

TOKEN : {
      <NUM: (   ["0"-"9"])+ >
    | <VAR: "var">
    | <DEF: "def">
    | <IMPRIMIR: "imprimir">
    | <BREAK: "break">
    | <CONTINUE: "continue">
     | <RETURN: "return">
    | <IF: "if">
    | <ELSE: "else">
    | <WHILE: "while">
    | <ID: ["a"-"z"] ( ["a"-"z"] | ["0"-"9"] | "_")* >
    | <COMA: ",">
    | <PCOMA: ";">
    | <PARENI: "(">
    | <PAREND: ")">
    | <LLAVEI: "{">
    | <LLAVED: "}">
    | <MAS: "+">
    | <MENOS: "-">
    | <POR: "*">
    | <DIV: "/">
    | <GT: ">">
    | <LT: "<">
    | <EQ: "=">
}
/** Fin Lexico */

void start() :
{
    Instruccion instr;
     Funcion func;
}
{
    (
            instr = instruccion() {instrucciones.add(instr);}
            |
            func = func() { funciones.put(func.id, func); }
        )+ <EOF>
}

Instruccion instruccion() :
{ Instruccion instr; Expresion exp; }
{
    (
        instr = definicion()
        |
        LOOKAHEAD(2)
        instr = asignacion()
        |
        instr = imprimir()
        |
        instr = saltar()
        |
        instr = continuar()
        |
        instr = retornar()
        |
        instr = si()
        |
        instr = mientras()
        |
        exp = llamada_func() <PCOMA> { instr = new LlamadaFuncion((ExpFuncion)exp); }
    )
    {
        return instr;
    }
}

Definicion definicion() :
{
    String id;
}
{
    <VAR> <ID> { id = token.image; } <PCOMA>
    |
    error = error() {}
    {
        return new Definicion(id);
    }
}

Asignacion asignacion() :
{
    String id;
    Expresion exp;
}
{
    <ID> { id = token.image; } <EQ> exp = exp() <PCOMA>
    {
        return new Asignacion(id, exp);
    }
}


Imprimir imprimir() :
{
    Expresion exp;
}
{
    <IMPRIMIR> <PARENI> exp = exp() <PAREND> <PCOMA>
    {
        return new Imprimir(exp);
    }
}

Break saltar() :
{ }
{
    <BREAK> <PCOMA> { return new Break();}
}

Continue continuar() :
{ }
{
    <CONTINUE> <PCOMA> { return new Continue();}
}

Retornar retornar() :
{
    Expresion exp;
}
{
    <RETURN> exp = exp() <PCOMA> { return new Retornar(exp); }
}


If si() :
{
    ExpBoolean expBool;
    Instruccion instr = null;
    List<Instruccion> instruccionesIfTrue = new ArrayList<Instruccion>();
    List<Instruccion> instruccionesIfFalse = new ArrayList<Instruccion>();
}
{
    <IF> <PARENI> expBool = expbool() <PAREND> <LLAVEI> (instr = instruccion() {instruccionesIfTrue.add(instr);} )+  <LLAVED>
    <ELSE> <LLAVEI> (instr = instruccion() {instruccionesIfFalse.add(instr);} )+ <LLAVED>
    {
        return new If(expBool, instruccionesIfTrue, instruccionesIfFalse);
    }
}

While mientras() :
{
    ExpBoolean expBool = null;
    Instruccion instr = null;
    List<Instruccion> instrucciones = new ArrayList<Instruccion>();
}
{
    <WHILE> <PARENI> expBool = expbool() <PAREND> <LLAVEI> (instr = instruccion() {instrucciones.add(instr);} )+  <LLAVED>
    {
        return new While(expBool, instrucciones);
    }
}

Expresion exp():
{
    Expresion op1;
    Expresion op2;
    Expresion exp = null;
}
{
    op1=factor()
    (
        <MAS> op2=factor() { exp = new ExpBinaria(op1, op2, ExpBinaria.Operador.SUMA); }
        |
        <MENOS> op2=factor() { exp = new ExpBinaria(op1, op2, ExpBinaria.Operador.RESTA); }
    )*
    {
        if (exp == null) {
            return op1;
        } else {
            return exp;
        }
    }
}

Expresion factor():
{
    Expresion op1;
    Expresion op2;
    Expresion exp = null;
}
{
    op1=num()
    (
        <POR> op2=num() { exp = new ExpBinaria(op1, op2, ExpBinaria.Operador.POR); }
        |
        <DIV> op2=num() { exp = new ExpBinaria(op1, op2, ExpBinaria.Operador.DIV); }
    )*
    {
        if (exp == null) {
            return op1;
        } else {
            return exp;
        }
    }
}

Expresion num() :
{
    Expresion exp;
}
{
     <NUM> {return new ExpNum(Integer.parseInt(token.image));}
     |
     exp = llamada_func() { return exp; }
}


ExpBoolean expbool():
{
    Expresion op1;
    Expresion op2;
    ExpBoolean.Operador op = null;
}
{
    op1=exp()
    (
        <GT> op2=exp() { op = ExpBoolean.Operador.GT; }
        |
        <LT> op2=exp() { op = ExpBoolean.Operador.LT; }
    )
    {
        return new ExpBoolean(op1, op2, op);
    }
}

Expresion llamada_func():
{
    String id;
    List<Expresion> valores = null;
}
{
    <ID> { id = token.image; }
    (<PARENI> valores = valor_params() <PAREND>)*
    {
        if (valores == null) {
            return new ExpId(id);
        } else {
            return new ExpFuncion(id, valores);
        }
    }
}

List<Expresion> valor_params():
{
    Expresion exp;
    List<Expresion> valores = new ArrayList<Expresion>();
}
{
    (   exp = exp() {valores.add(exp); }
        (<COMA> exp = exp() {valores.add(exp); } )*
    )?
    {
        return valores;
    }
}

Funcion func():
{
    String id;
    Instruccion instr;
    List<Instruccion> instrucciones = new ArrayList<Instruccion>();
    Set<String> params;
}
{
    <DEF> <ID> { id = token.image; }
    <PARENI> params = params() <PAREND>
    <LLAVEI> (instr = instruccion() {instrucciones.add(instr);} )+ <LLAVED>
    {
        return new Funcion(id, params, instrucciones);
    }
}


Set<String> params():
{
    Set<String> params = new HashSet<String>();
}
{
    (
        <VAR> <ID> {params.add(token.image); }
        (<COMA> <VAR> <ID> {params.add(token.image); })*
    )?
    {
        return params;
    }
}
